--- a/packages/goodwe.yaml
+++ b/packages/goodwe.yaml
@@ -180,7 +180,7 @@ automation:
                   text: >
                     Eskom/Grid power lost
           title: 'Power'
-          target: ["#alerts"]
+          target: ["#power-alerts"]
           message: >
             Eskom/Grid power lost
   # Notification - grid power returned
@@ -206,7 +206,7 @@ automation:
                   text: >
                     Eskom/Grid power returned
           title: 'Power'
-          target: ["#alerts"]
+          target: ["#power-alerts"]
           message: >
             Eskom/Grid power returned
 
@@ -233,7 +233,7 @@ automation:
                     text: >
                       *Eskom:* {{ states('sensor.energy_buy_daily') }} kWh / R{{ states('sensor.energy_buy_daily_cost') }}
                       {{- '\n' -}}*Solar:* {{ states('sensor.solar_generate_daily') }} kWh / R{{ states('sensor.energy_generate_daily_saving') }}
-                      {{- '\n' -}}*Total:* {{ states('sensor.energy_buy_daily')|float + states('sensor.solar_generate_daily')|float }} kWh / R{{ states('sensor.energy_buy_daily_cost')|float + states('sensor.energy_generate_daily_saving')|float|round(2) }}
+                      {{- '\n' -}}*Total:* {{ (states('sensor.energy_buy_daily')|float + states('sensor.solar_generate_daily')|float)|round(2) }} kWh / R{{ (states('sensor.energy_buy_daily_cost')|float + states('sensor.energy_generate_daily_saving')|float)|round(2) }}
               - type: header
                 text:
                   type: plain_text
@@ -245,7 +245,7 @@ automation:
                     text: >
                       *Eskom:* {{ states('sensor.energy_buy_monthly') }} kWh / R{{ states('sensor.energy_buy_monthly_cost') }}
                       {{- '\n' -}}*Solar:* {{ states('sensor.solar_generate_monthly') }} kWh / R{{ states('sensor.energy_generate_monthly_saving') }}
-                      {{- '\n' -}}*Total:* {{ states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float | int }} kWh / R{{ states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float|round(2) }}
+                      {{- '\n' -}}*Total:* {{ (states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float)|round(2) }} kWh / R{{ (states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float)|round(2) }}
               - type: section
                 text:
                   type: mrkdwn
@@ -255,10 +255,10 @@ automation:
           target: ["#general"]
           message: >
             Today's power usage: {{ states('sensor.energy_buy_daily') }} kWh / R{{ states('sensor.energy_buy_daily_cost') }}
-                    {{- '\n' -}}Today's solar generation: {{ states('sensor.solar_generate_daily') }} kWh / R{{ states('sensor.energy_generate_daily_saving') }}
-                    {{- '\n' -}}This month's current usage: {{ states('sensor.energy_buy_monthly') }} kWh / R{{ states('sensor.energy_buy_monthly_cost') }}
-                    {{- '\n' -}}This month's solar generation: {{ states('sensor.solar_generate_monthly') }} kWh / R{{ states('sensor.energy_generate_monthly_saving') }}
-                    {{- '\n' -}}Total monthly usage: {{ states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float | int }} kWh / R{{ states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float|round(2) }}
+            {{- '\n' -}}Today's solar generation: {{ states('sensor.solar_generate_daily') }} kWh / R{{ states('sensor.energy_generate_daily_saving') }}
+            {{- '\n' -}}This month's current usage: {{ states('sensor.energy_buy_monthly') }} kWh / R{{ states('sensor.energy_buy_monthly_cost') }}
+            {{- '\n' -}}This month's solar generation: {{ states('sensor.solar_generate_monthly') }} kWh / R{{ states('sensor.energy_generate_monthly_saving') }}
+            {{- '\n' -}}Total monthly usage: {{ (states('sensor.energy_buy_monthly')|float + states('sensor.solar_generate_monthly')|float)|round(2) }} kWh / R{{ (states('sensor.energy_buy_monthly_cost')|float + states('sensor.energy_generate_monthly_saving')|float)|round(2) }}
 
   ## notification if SoH drop below 50%
   - alias: Notify SoH below 50
