--- a/packages/light_motion_babyroom.yaml
+++ b/packages/light_motion_babyroom.yaml
@@ -33,6 +33,16 @@ automation:
         - condition: state  # 'night' condition: from sunset until sunrise 
           entity_id: sun.sun
           state: 'below_horizon'
+      - condition: or
+        conditions:
+        - condition: state
+          entity_id: light.small_bedroom
+          state: 'off'
+          for:
+            seconds: 15
+        - condition: state
+          entity_id: light.small_bedroom
+          state: 'on'
     action:
       - service: timer.start
         data:
