--- a/packages/mail.yaml
+++ b/packages/mail.yaml
@@ -23,13 +23,13 @@ automation:
               - condition: template
                 value_template: "{{ trigger.event.data.new_state.attributes.location != None }}"
               - condition: template
-                value_template: "{{ trigger.event.data.new_state.attributes.location != '' }}"
+                value_template: "{{ trigger.event.data.new_state.attributes.location|trim != '' }}"
           - condition: and
             conditions:
               - condition: template
                 value_template: "{{ trigger.event.data.new_state.attributes.info_text != None }}"
               - condition: template
-                value_template: "{{ trigger.event.data.new_state.attributes.info_text != '' }}"
+                value_template: "{{ trigger.event.data.new_state.attributes.info_text|trim != '' }}"
         #  - condition: template
         #    value_template: "{{ 'out for delivery' in trigger.event.data.new_state.attributes.info_text|lower }}"
         #  - condition: template
@@ -43,12 +43,12 @@ automation:
           message: >
             Name: {{ trigger.event.data.new_state.attributes.tracking_number}} {{ trigger.event.data.new_state.attributes.friendly_name | replace("Seventeentrack Package: ","") }}
             {% if trigger.event.data.new_state.attributes.location != None %}
-            {% if trigger.event.data.new_state.attributes.location != '' %}
+            {% if trigger.event.data.new_state.attributes.location|trim != '' %}
             {{- '\n' -}}Location: {{ trigger.event.data.new_state.attributes.location }}
             {% endif %}
             {% endif %}
             {% if trigger.event.data.new_state.attributes.info_text != None %}
-            {% if trigger.event.data.new_state.attributes.info_text != '' %}
+            {% if trigger.event.data.new_state.attributes.info_text|trim != '' %}
             {{- '\n' -}}Event: {{ trigger.event.data.new_state.attributes.info_text }}
             {% endif %}
             {% endif %}
@@ -62,12 +62,12 @@ automation:
                   text: >
                     Name: {{ trigger.event.data.new_state.attributes.tracking_number}} {{ trigger.event.data.new_state.attributes.friendly_name | replace("Seventeentrack Package: ","") }}
                     {% if trigger.event.data.new_state.attributes.location != None %}
-                    {% if trigger.event.data.new_state.attributes.location != '' %}
+                    {% if trigger.event.data.new_state.attributes.location|trim != '' %}
                     {{- '\n' -}}Location: {{ trigger.event.data.new_state.attributes.location }}
                     {% endif %}
                     {% endif %}
                     {% if trigger.event.data.new_state.attributes.info_text != None %}
-                    {% if trigger.event.data.new_state.attributes.info_text != '' %}
+                    {% if trigger.event.data.new_state.attributes.info_text|trim != '' %}
                     {{- '\n' -}}Event: {{ trigger.event.data.new_state.attributes.info_text }}
                     {% endif %}
                     {% endif %}
