--- a/packages/alarm_armed_state_triggers.yaml
+++ b/packages/alarm_armed_state_triggers.yaml
@@ -9,9 +9,6 @@ automation:
     - entity_id: alarm_control_panel.home_alarm
       platform: state
       to: 'armed_away'
-    - platform: sun
-      event: sunrise
-      offset: "+00:20:00"
     action:
     - service: light.turn_off
       data_template:
@@ -19,7 +16,9 @@ automation:
           {%- set domains = ['light'] -%}
           {%- for domain in domains -%}
           {%- for item in states[domain]  -%}
-            {{ " " }}{{ item.entity_id }}{%- if not loop.last %},{% endif -%}
+          {%- if item.entity_id not in states.light.lights_whole_night.attributes.entity_id %}
+            {{- " " }}{{ item.entity_id }}{%- if not loop.last %},{% endif -%}
+          {%- endif -%}
           {%- endfor -%}
           {%- endfor -%}
 
