goodwe read every 10 instead of 30 seconds

--- a/packages/goodwe.yaml
+++ b/packages/goodwe.yaml
@@ -1,10 +1,10 @@
 sensor:
   - platform: goodwe
+    scan_interval: 10
     ip_address: 192.168.241.143
     #port: 8899
     #network_timeout: 2
     #network_retries: 3
-    #scan_interval: 30
     #sensor_name_prefix: GoodWe
 
   - platform: template
