improve filtering on light jinja

--- a/packages/alarm_armed_state_triggers.yaml
+++ b/packages/alarm_armed_state_triggers.yaml
@@ -13,14 +13,16 @@ automation:
     - service: light.turn_off
       data_template:
         entity_id: >
+          {%- set data = namespace(lights_todo=[]) -%}
           {%- set domains = ['light'] -%}
           {%- for domain in domains -%}
-          {%- for item in states[domain]  -%}
-          {%- if item.entity_id not in states.light.lights_whole_night.attributes.entity_id %}
-            {{- " " }}{{ item.entity_id }}{%- if not loop.last %},{% endif -%}
-          {%- endif -%}
+            {%- for item in states[domain]  -%}
+              {%- if item.entity_id not in states.light.lights_whole_night.attributes.entity_id and item.attributes.icon != 'mdi:lightbulb-group' %}
+                {%- set data.lights_todo = data.lights_todo + [item.entity_id] %}
+              {%- endif -%}
+            {%- endfor -%}
           {%- endfor -%}
-          {%- endfor -%}
+          {{ data.lights_todo | join(",") }}
 
   ### Lock Pet door if alarm armed away
   #- alias: Lock Pet door if alarm armed away
