--- a/packages/light_triggers_morning.yaml
+++ b/packages/light_triggers_morning.yaml
@@ -10,11 +10,13 @@ automation:
     - service: light.turn_off
       data_template:
         entity_id: >
+          {%- set data = namespace(lights_todo=[]) -%}
           {%- set domains = ['light'] -%}
           {%- for domain in domains -%}
-          {%- for item in states[domain]  -%}
-          {%- if item.entity_id not in ['light.main_bathroom'] %}
-            {{- " " }}{{ item.entity_id }}{%- if not loop.last %},{% endif -%}
-          {%- endif -%}
+            {%- for item in states[domain]  -%}
+              {%- if item.entity_id not in ['light.main_bathroom'] and item.attributes.icon != 'mdi:lightbulb-group' %}
+                {%- set data.lights_todo = data.lights_todo + [item.entity_id] %}
+              {%- endif -%}
+            {%- endfor -%}
           {%- endfor -%}
-          {%- endfor -%}
+          {{ data.lights_todo | join(",") }}
